WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86265
REGRESSION(
r104885
): Images missing from printed YummySoup! recipes
https://bugs.webkit.org/show_bug.cgi?id=86265
Summary
REGRESSION(r104885): Images missing from printed YummySoup! recipes
Brady Eidson
Reported
2012-05-11 15:49:10 PDT
REGRESSION(
r104885
): Images missing from printed YummySoup! recipes We know we suspected we might break certain apps in
http://trac.webkit.org/changeset/104885
One of those was fixed in
http://trac.webkit.org/changeset/107355
where we assumed we were seeing "Paths-as-URLs" passed in at the API layer. In exploring YummySoup! we found that these bogus URLs were more likely to be "file URLs with file: stripped off the beginning" 107355 didn't *quite* handle this properly, so a different fix is forthcoming. In radar as <
rdar://problem/11361907
>
Attachments
Patch v1
(4.61 KB, patch)
2012-05-11 15:56 PDT
,
Brady Eidson
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-05-11 15:56:42 PDT
Created
attachment 141518
[details]
Patch v1
Alexey Proskuryakov
Comment 2
2012-05-11 16:00:35 PDT
Comment on
attachment 141518
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=141518&action=review
> Source/WebKit/mac/ChangeLog:12 > + Rename _webkit_URLFromURLOrPath to _webkit_URLFromURLOrMalformedFileURL, and change it
"Malformed" may sound like too much of a real thing, perhaps "Legacy" would be better?
Brady Eidson
Comment 3
2012-05-11 16:03:59 PDT
(In reply to
comment #2
)
> (From update of
attachment 141518
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=141518&action=review
> > > Source/WebKit/mac/ChangeLog:12 > > + Rename _webkit_URLFromURLOrPath to _webkit_URLFromURLOrMalformedFileURL, and change it > > "Malformed" may sound like too much of a real thing, perhaps "Legacy" would be better?
"LegacyFileURL" implies it was ever a valid file URL. I chose "Malformed" to stress its invalidity. I'll go with "Invalid".
Alexey Proskuryakov
Comment 4
2012-05-11 16:11:40 PDT
A schemeless URL like this is still a valid relative URL AFAICT, and it points to a different file system object that may or may not exist. "Legacy URL" is also somewhat misleading, but it should communicate that part at least.
Brady Eidson
Comment 5
2012-05-11 16:15:01 PDT
Alexey and I discussed more on IRC and agreed on "Schemeless"
Brady Eidson
Comment 6
2012-05-11 16:19:37 PDT
http://trac.webkit.org/changeset/116820
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug